This file describes changes in the IO package.

X.Y (YYYY-MM-DD)
  - Fix problem with IO_Pickling some very large objects
  - Add pickle support for transformations and partial
    permutations
  - Try to ensure files are flushed on exit, even if they are
    not explicitly closed.
  - ...

4.3.1 (2014-04-04)
  - Previous release had an invalid release date in
    PackageInfo.g (2014-04-31 instead of 2014-03-31).
  - Merge HISTORY and CHANGES files.

4.3 (2014-03-31)
  - Update and tweak the package build system
  - Move package repository and website to GitHub
  - Pickling/Unpickling of Floats

4.2 (2012-05-28)
  - Fix behaviour of IO_select to try again if the system call was
    interrupted. This fixes an infinite loop bug in
    ParTakeFirstResultByFork.
  - Change "source" to "." in AC_FIND_GAP to provide support for BSD.
  - Add script "configure_like_gap"
  - Compile documentation against 4.5.4
  - Fix installations instructions, remove static linking from README.

4.1 (2012-01-30)
  - Make it compile on Windows.

4.0 (2012-01-27)
  - Use new build setup using automake/autoconf/libtool
  - Move repository to git@git.gap-system.org/io
  - Updated the documentation of IO_select

3.3 (2011-03-23)
  - Fixed a bug to compile on latest cygwin without warning.
  - Added IOHub functionality and documented it.
  - Hashserver example.
  - Cleanup autoconf configuration.

3.2 (2011-02-02)
  - Remove the global function f which was accidentally put in there
    in 3.1.
  - Update cnf files for clang and to compile on GAP 4.4 and 4.5
  - Update cnf files to autoconf 2.65
  - Add functions gethostname and getsockname.
  - Change license to GPL 3

3.1 (2010-07-23)
  - Fix documentation of /dev/random and /dev/urandom
  - Background jobs
  - Parallel patterns: ParMapReduce, ParTakeFirstResult, ParDo

3.0 (2009-04-08)
  - Added ignoring of SIGPIPE for architectures where standard
    behaviour is to terminate the process.