@@ -170,6 +170,17 @@ InstallGlobalFunction(IO_File, function( arg )
   fi;
 end );
 
+# Add equality and order for IsFile objects.
+# This ordering is not based on fds as they can be reused when files are closed.
+# We use the fact that Files objects can't be copied (as they contain the cache)
+InstallMethod( \=, "for two IsFile objects",
+  [ IsFile, IsFile ],
+  function(a,b) return IO_MasterPointerNumber(a) < IO_MasterPointerNumber(b); end );
+
+InstallMethod( \<, "for two IsFile objects",
+  [ IsFile, IsFile ],
+  function(a,b) return IO_MasterPointerNumber(a) < IO_MasterPointerNumber(b); end );
+
 # A nice View method:
 InstallMethod( ViewObj, "for IsFile objects", [IsFile],
   function(f)
@@ -1429,6 +1440,74 @@ function(arg)
   fi;
   return f;
 end );
+
+InstallGlobalFunction( IO_CompressedFile,
+function(arg)
+  # arguments: filename [,mode][,bufsize]
+  # mode and bufsize as in IO_File
+  local bufsize,f,fd,filename,mode,r,ext,splitname,extension,compressor,file;
+  if Length(arg) = 1 then
+      filename := arg[1];
+      mode := "r";
+      bufsize := IO.DefaultBufSize;
+  elif Length(arg) = 2 then
+      filename := arg[1];
+      if IsString(arg[2]) then
+          mode := arg[2];
+          bufsize := IO.DefaultBufSize;
+      else
+          mode := "r";
+          bufsize := arg[2];
+      fi;
+  elif Length(arg) = 3 then
+      filename := arg[1];
+      mode := arg[2];
+      bufsize := arg[3];
+  else
+      Error("IO: Usage: IO_CompressedFile( filename [,mode][,bufsize] )\n",
+            "with IsString(filename)");
+  fi;
+  if not(IsString(filename)) and not(IsString(mode)) then
+      Error("IO: Usage: IO_CompressedFile( filename [,mode][,bufsize] )\n",
+            "with IsString(filename)");
+  fi;
+
+
+  splitname := SplitString(filename, ".");
+  extension := splitname[Length(splitname)];
+
+  # compressor format: ["executable", args for compression, args for uncompression]
+  if extension = "gz" then
+      compressor := ["gzip",["-9q"],["-dq"]];
+  elif extension = "bz2" then
+      compressor := ["bzip2",["-9q"],["-dq"]];
+  elif extension = "xz" then
+      # xz higher than 6 is not really worth the time / space tradeoff
+      compressor := ["xz",["-6q"],["-dq"]];
+  else
+      return IO_File(filename,mode,bufsize);
+  fi;
+
+  if mode = "r" then
+      file := IO_FilteredFile([[compressor[1], compressor[3]]], filename, mode, bufsize);
+  else
+      file := IO_FilteredFile([[compressor[1], compressor[2]]], filename, mode, bufsize);
+  fi;
+
+  if file <> fail then
+      return file;
+  fi;
+
+  # Oops, something went wrong. Let's see if the problem is the compression prog
+  if IO_FindExecutable(compressor[1]) = fail then
+      Error("Cannot find '",compressor[1],
+            "', required for "+extension+" files in IO_CompressedFile");
+  fi;
+  #Nope, then just return fail
+  return fail;
+
+end );
+
 
 InstallGlobalFunction( IO_SendStringBackground, function(f,st)
   # The whole string st is send to the File object f but in the background.
